# promotr

./: .gitignore  Cargo.toml  README.md  Settings.toml
src/: config.rs  instagram_promotr.rs  main.rs
