[package]
name = "promotr"
version = "0.1.0"
authors = ["codejitsu <me@codejitsu.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
structopt = "0.3"
reqwest = { version = "0.10", features = ["blocking", "json", "cookies"] }
tokio = { version = "0.2", features = ["full"] }
json = "0.12.4"
rand = "0.7.3"